--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="masthead column">
         <h1>
-          <a href="/">andyvanee.com</a>
+          <a href="/"><%= site_name %></a>
         </h1>
       </div>
       <div class="main row" role="main">
