--- a/source/stylesheets/all.css.less
+++ b/source/stylesheets/all.css.less
@@ -8,6 +8,13 @@
   }
 }
 
+.masthead h1 {
+  font-weight: bold;
+  a {
+    color: #d8364d;
+  }
+}
+
 .article-list {
   padding-left: 0;
   list-style-type: none;
