--- a/source/stylesheets/minotaur.css
+++ b/source/stylesheets/minotaur.css
@@ -8,9 +8,9 @@ body {
     margin: 0;
     font-family: Georgia, serif;
     font-size: 16px;
-    line-height: 1.35;
-    background-color: white;
-    color: #333;
+    line-height: 1.45;
+    background-color: #fafafa;
+    color: #555;
 }
 
 h1,
@@ -22,6 +22,8 @@ h5 {
     font-weight: 900;
     margin: 1rem 0;
     line-height: 1.1;
+    color: #333;
+    font-weight: 500;
 }
 
 h1 {
@@ -29,15 +31,15 @@ h1 {
 }
 
 h2 {
-    font-size: 38px;
+    font-size: 34px;
 }
 
 h3 {
-    font-size: 32px;
+    font-size: 30px;
 }
 
 h4 {
-    font-size: 26px;
+    font-size: 25px;
 }
 
 h5 {
