--- a/themes/andyvanee/static/Main.css
+++ b/themes/andyvanee/static/Main.css
@@ -79,7 +79,9 @@ header h1 a {
 }
 
 main > footer {
-    margin: 3rem 0;
+    margin: 3rem 0 0;
+    padding: 3rem 0;
+    border-top: 1px solid #ddd;
 }
 
 .page-number {
@@ -112,9 +114,14 @@ pre {
 }
 
 blockquote {
-    font-size: 1.2em;
+    font-size: 1em;
+    font-style: italic;
     line-height: 1.5em;
     border-left: 3px solid #ddd;
     margin-left: 0;
     padding-left: 1em;
+}
+
+strong {
+    color: #a41d30;
 }
